# wtffmpeg

./: ...  README.md  final_repos.txt  gql.sh  pyproject.toml  raw_repos.txt
src/wtffmpeg/: __init__.py  cli.py  config.py  llm.py  profiles.py  prompt.py  repl.py  runtime.py  wtff.py
src/wtffmpeg/profiles/: minimal  null.txt
