[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wtffmpeg"
version = "0.2.0"
description = "A command-line tool to translate natural language to ffmpeg commands using a local LLM."
# You can change the author name and email.
authors = [
  { name="ScottVR", email="scottvr@gmail.com" },
]
readme = "README.md" 
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# List your project's dependencies here.
dependencies = [
    "openai>=1.107.2",
    "pyperclip",
    "prompt-toolkit",
]

# This section creates the command-line script alias.
# When you run `pip install .`, it will create an executable named `wtff`
# in your virtual environment's bin/ directory. This executable will
# run the `main` function from the `wtffmpeg.py` script.
[project.scripts]
wtff = "wtffmpeg.wtff:main"

[project.urls]
"Homepage" = "https://github.com/scottvr/wtffmpeg" 

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]